compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteWhen.fir.kt
fun test(a: Any) {
    when (a)<!SYNTAX!><!>
}